# w

./: .gitignore  1latest  README.md  doomsday.cpp  duval.cpp  generalized-flow-gcd-1.input  generalized-flow.cpp  incunabulum-mine.c  incunabulum-working.patch  incunabulum.c  latest  lis.cpp  makefile  qs.cpp  segtree-lazy-generic.cpp  segtree-recur-point.cpp  simplex.cpp  suffixarr1.cpp  suffixarr2.cpp  suffixarr4.cpp  xor-and-insert.cpp  xor-and-insert.input1  z.cpp
abc153/: a.cpp  a.in  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  makefile
algo/: binsearch.cpp  dlx.cpp  doomsday.cpp  duval.cpp  edmonds-karp.cpp  euc.cpp  fenwick-orbits.py  fft.cpp  generalized-flow.cpp  help-ashu.cpp  hld.cpp  lca-binary-lifting.cpp  makefile  segtree-iterative.cpp  segtree-recur.cpp  suffixarr.cpp  suffixarr3.cpp  suffixarray.cpp  xor-and-insert.cpp  z.cpp
atcoder-dp/: CMakeLists.txt  README.md  g.cpp  h.cpp  i.cpp  j.cpp  l.cpp
contest-1354/: a.cpp  b.cpp  btxt  c1-rand.cpp  c2.cpp  d.c
cses/: .gitignore  1-run.sh  CMakeLists.txt  README.md  XX.cpp  YY.cpp  a-plus-b.s  apartments.cpp  array-description.cpp  book-shop.cpp  building-roads.cpp  building-teams.cpp  coin-collector.cpp  coin-combinations-1.cpp  coin-combinations-2.cpp  collecting-numbers.cpp  company-queries-I.cpp  company-queries-II.cpp  compile-asm.sh  compile_commands.json  concert-tickets.cpp  counting-paths.cpp  counting-rooms.cpp  counting-towers.cpp  course-schedule.cpp  cses-counting-paths.cpp  cses-counting-tilings.cpp  cses-elevtor-rides.cpp  cses.code-workspace  cycle-finding.cpp  dice-combinations.cpp  distance-queries.cpp  distinct-colors.cpp  distinct-numbers.cpp  distinct-routes.cpp  download-speed.cpp  dynamic-range-sum-queries-mo.cpp  edit-distance.cpp  elevator-rides.cpp  factory-machines.cpp  (+81 more)
elementary/: README.md  binsearch.cpp  elementary.cpp  makefile  treap-stolen.cpp  treap.cpp
forces-assorted/: 1330A.cpp  1330B.cpp  1330C.cpp  1330D.cpp  237a.cpp  260a.cpp  263a.cpp  266b.cpp  271a.cpp  289b.cpp  32b.cpp  450b.cpp  462b.cpp  59a.cpp  69a.cpp  elegant-289b.cpp  makefile
forces/1293/: a.cpp  b.py  d.cpp  d.hs  d.in  d.in3  makefile
forces/1354/: d.cpp  dbit.cpp  makefile  tree.py
forces/1358/: a.cpp  b.cpp  c.cpp  d.cpp  dcodelegend.cpp  dsuperty.cpp  h.cpp  makefile
forces/1359/: a.cpp  b.cpp  bcomplicated.cpp  c.cpp  d.cpp  makefile
forces/1360/: README.md  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  makefile
forces/1362/: :w  a.cpp  d.cpp  makefile
forces/1366/: b.cpp  c.cpp  makefile  testc.py
forces/1367/: a.cpp  b.cpp  c.cpp  d.cpp  makefile
forces/1380/: a.cpp  b.cpp  c.cpp  d.cpp  e-dsu.cpp  e-lca.cpp  f.cpp  makefile
forces/1437/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
forces/1537/: a.cpp  c  c.cpp  c.in  d.in2
forces/1541/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp
forces/1542/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
forces/1543/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d1.cpp  d2.cpp
forces/1546/: a.cpp  b.cpp  c.cpp  d.cpp
forces/1550/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
forces/1551/: CMakeLists.txt  a.cpp  b1.cpp  b2.cpp  c.cpp  d2.cpp
forces/1553/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  compile_commands.json  d.cpp
forces/1554/: CMakeLists.txt  a.cpp  b.cpp  c.py  expc.py
forces/1555/: CMakeLists.txt  a.cpp  a.py  b.cpp
forces/1556/: a.cpp  b.cpp  c.cpp
forces/1566/: CMakeLists.txt  b.cpp  c.cpp  d1.cpp  d2.cpp
forces/1567/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
forces/1606/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  d.py  e.cpp
forces/ladder/: 100551a-linkcut.cpp  100551a.cpp  1012C  1012C.cpp  110a.cpp  112a.cpp  1304c.cpp  1320a.cpp  1330B.cpp  1345b.cpp  1359b.cpp  136a.cpp  1389c.cpp  1472b.cpp  1501b.cpp  1538a.cpp  1559a.cpp  1559b.cpp  166e.cpp  275a.cpp  289b.cpp  315a.cpp  331c1.cpp  331c2.cpp  368b.cpp  451b.cpp  455a.cpp  545c.cpp  550a.cpp  550c.cpp  580a.cpp  676c.cpp  702a.cpp  729b.cpp  996a.cpp  998b.cpp  CMakeLists.txt  README.md  makefile  template.cpp
forces1293/: b.cpp  c.cpp  c.in  d.in1
jeffe-dp/: CMakeLists.txt  longest-convex-subseq.cpp
koans/: alllcp.hs  bwt.hs  bwt2.hs  cascade.hs  duval.hs  profunctor-optics.hs  rank-suffixes-nlogsqn.hs  ranksuffixes-nlogn.hs  tensor.hs
leetcode/: longest-substring-without-repeating-characters.cpp  triangle.py
numerical/: cancellation-1-7  cancellation-1-7.cpp  makefile  sqrt-pow-1-12  sqrt-pow-1-12.cpp
py/: README.md
spoj/: .gitignore  brckts.cpp  foo  makefile  millerrabin.cpp  primes.cpp  primes2.cpp  primes2c.c  primeslin.cpp  segsieve  segsieve.cpp
