project(contest C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-fdiagnostics-color=always -O2 -g -Wall -fsanitize=address -fsanitize=undefined")

add_executable(a a.cpp)
add_executable(b b.cpp)
# add_executable(b1 b1.cpp)
# add_executable(c c.cpp)
# add_executable(d2 d2.cpp)
# add_executable(d d.cpp)
# add_executable(e e.cpp)
